--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget7/tables-widget7.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget7/tables-widget7.component.html
@@ -4,13 +4,11 @@
     <div>
       <span class="card-label fw-bolder fs-3 mb-1">Select Entity</span>
       <span class="badge badge-light-success fs-6 fw-bolder">
-        <select class="form-select form-select-sm form-select-solid" data-placeholder="" data-hide-search="true"
-          style="width: 220px;" [(ngModel)]="selectEntity">
-          <option value=""> Select Entity </option>
-          <option value="VEELS00001"> VEELS00001 </option>
-          <option value="VEELS00002"> VEELS00002 </option>
-          <option value="VEELS00003"> VEELS00003 </option>
-        </select>
+        <input class="form-control" type="text" list="allentityList" placeholder="Select Pump Name"
+          (change)="getcustomerIdByEntity($event)">
+        <datalist id="allentityList">
+          <option *ngFor="let data of allentityList" [value]="data.entityId">
+        </datalist>
       </span>
     </div>
   </h3>
@@ -23,7 +21,7 @@
             fw-bolder
             px-4
             me-1
-          " data-bs-toggle="tab" [ngClass]="activeClass('kt_table_widget_7_tab_1')">
+          " data-bs-toggle="tab" [ngClass]="activeClass('kt_table_widget_7_tab_1')" (click)="exportToPDF()">
           PDF
         </a>
       </li>
@@ -34,7 +32,7 @@
             fw-bolder
             px-4
             me-1
-            " data-bs-toggle="tab" [ngClass]="activeClass('kt_table_widget_7_tab_1')">
+            " data-bs-toggle="tab" [ngClass]="activeClass('kt_table_widget_7_tab_1')" (click)="exportexcel()">
           CSV
         </a>
       </li>
@@ -46,369 +44,50 @@
 <div class="card-body py-3">
   <div class="tab-content">
     <!-- begin::Tap pane -->
-    <div class="tab-pane fade" [ngClass]="activeClass('kt_table_widget_7_tab_1')" id="kt_table_widget_7_tab_1">
-      <!-- begin::Table container -->
-      <div class="table-responsive">
-        <!-- begin::Table -->
-        <table class="table align-middle gs-0 gy-3">
-          <!-- begin::Table head -->
-          <thead>
-            <tr class="fw-bolder text-muted bg-light">
-              <th class="min-w-125px">Month</th>
-              <th class="min-w-125px">Cr Sales</th>
-              <th class="min-w-125px">Cr Payments</th>
-              <th class="min-w-125px">Toll Recharge</th>
-              <th class="min-w-125px">Toll Payments</th>
-            </tr>
-          </thead>
-          <!-- end::Table head -->
-          <!-- begin::Table body -->
-          <tbody>
-            <tr>
-              <td>
-                <div class="d-flex align-items-center">
-                  <div class="d-flex justify-content-start flex-column">
-                    <span class="badge badge-light-primary fs-7 fw-bold p-0 min-w-100px ">Jan 2024</span>
-                  </div>
+    <!-- begin::Table container -->
+    <div class="table-responsive">
+      <!-- begin::Table -->
+      <table id="excel-table" class="table align-middle gs-0 gy-3">
+        <!-- begin::Table head -->
+        <thead>
+          <tr class="fw-bolder text-muted bg-light">
+            <th class="min-w-125px">Month</th>
+            <th class="min-w-125px">Cr Sales</th>
+            <th class="min-w-125px">Cr Payments</th>
+            <th class="min-w-125px">Toll Recharge</th>
+            <th class="min-w-125px">Toll Payments</th>
+          </tr>
+        </thead>
+        <!-- end::Table head -->
+        <!-- begin::Table body -->
+        <tbody *ngFor="let data of fastagData;">
+          <tr>
+            <td>
+              <div class="d-flex align-items-center">
+                <div class="d-flex justify-content-start flex-column">
+                  <span class="badge badge-light-primary fs-7 fw-bold p-0 min-w-100px ">{{data.month }}
+                    {{data.year}}</span>
                 </div>
-              </td>
-              <td>
-                <span class="badge badge-light-primary fs-7 fw-bold">$200,500</span>
-              </td>
-              <td>
-                <span class="badge badge-light-primary fs-7 fw-bold">$200,500</span>
-              </td>
-              <td>
-                <span class="badge badge-light-primary fs-7 fw-bold">$200,500</span>
-              </td>
-              <td>
-                <span class="badge badge-light-primary fs-7 fw-bold">$200,500</span>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <div class="d-flex align-items-center">
-                  <div class="d-flex justify-content-start flex-column">
-                    <span class="badge badge-light-primary fs-7 fw-bold p-0 min-w-100px ">Jan 2024</span>
-                  </div>
-                </div>
-              </td>
-              <td>
-                <span class="badge badge-light-primary fs-7 fw-bold">$200,500</span>
-              </td>
-              <td>
-                <span class="badge badge-light-primary fs-7 fw-bold">$200,500</span>
-              </td>
-              <td>
-                <span class="badge badge-light-primary fs-7 fw-bold">$200,500</span>
-              </td>
-              <td>
-                <span class="badge badge-light-primary fs-7 fw-bold">$200,500</span>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <div class="d-flex align-items-center">
-                  <div class="d-flex justify-content-start flex-column">
-                    <span class="badge badge-light-primary fs-7 fw-bold p-0 min-w-100px ">Jan 2024</span>
-                  </div>
-                </div>
-              </td>
-              <td>
-                <span class="badge badge-light-primary fs-7 fw-bold">$200,500</span>
-              </td>
-              <td>
-                <span class="badge badge-light-primary fs-7 fw-bold">$200,500</span>
-              </td>
-              <td>
-                <span class="badge badge-light-primary fs-7 fw-bold">$200,500</span>
-              </td>
-              <td>
-                <span class="badge badge-light-primary fs-7 fw-bold">$200,500</span>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <div class="d-flex align-items-center">
-                  <div class="d-flex justify-content-start flex-column">
-                    <span class="badge badge-light-primary fs-7 fw-bold p-0 min-w-100px ">Jan 2024</span>
-                  </div>
-                </div>
-              </td>
-              <td>
-                <span class="badge badge-light-primary fs-7 fw-bold">$200,500</span>
-              </td>
-              <td>
-                <span class="badge badge-light-primary fs-7 fw-bold">$200,500</span>
-              </td>
-              <td>
-                <span class="badge badge-light-primary fs-7 fw-bold">$200,500</span>
-              </td>
-              <td>
-                <span class="badge badge-light-primary fs-7 fw-bold">$200,500</span>
-              </td>
-            </tr>
-          </tbody>
-          <!-- end::Table body -->
-        </table>
-      </div>
-      <!-- end::Table -->
+              </div>
+            </td>
+            <td>
+              <span class="badge badge-light-primary fs-7 fw-bold"> {{data.totalCr }}</span>
+            </td>
+            <td>
+              <span class="badge badge-light-primary fs-7 fw-bold"> {{data.totalPur }} </span>
+            </td>
+            <td>
+              <span class="badge badge-light-primary fs-7 fw-bold"> {{data.totalTollPay }} </span>
+            </td>
+            <td>
+              <span class="badge badge-light-primary fs-7 fw-bold"> {{data.totalTollPur }} </span>
+            </td>
+          </tr>
+        </tbody>
+        <!-- end::Table body -->
+      </table>
     </div>
-    <!-- end::Tap pane -->
-    <!-- begin::Tap pane -->
-    <div class="tab-pane fade" [ngClass]="activeClass('kt_table_widget_7_tab_2')" id="kt_table_widget_7_tab_2">
-      <!-- begin::Table container -->
-      <div class="table-responsive">
-        <!-- begin::Table -->
-        <table class="table align-middle gs-0 gy-3">
-          <!-- begin::Table head -->
-          <thead>
-            <tr>
-              <th class="p-0 w-50px"></th>
-              <th class="p-0 min-w-150px"></th>
-              <th class="p-0 min-w-140px"></th>
-              <th class="p-0 min-w-120px"></th>
-            </tr>
-          </thead>
-          <!-- end::Table head -->
-          <!-- begin::Table body -->
-          <tbody>
-            <tr>
-              <td>
-                <div class="symbol symbol-50px me-2">
-                  <span class="symbol-label bg-light-info">
-                    <app-keenicon name="abstract-41" class="fs-2x text-info"></app-keenicon>
-                  </span>
-                </div>
-              </td>
-              <td>
-                <a href="#" class="text-gray-900 fw-bolder text-hover-primary mb-1 fs-6">
-                  Strawberry Boxes
-                </a>
-                <span class="text-muted fw-bold d-block fs-7">From Spain</span>
-              </td>
-              <td class="text-end">
-                <span class="text-muted fw-bold d-block fs-8">Ordered</span>
-                <span class="text-gray-900 fw-bolder d-block fs-7">4 week ago</span>
-              </td>
-              <td class="text-end">
-                <span class="badge badge-light-info fs-7 fw-bolder">Delivered</span>
-              </td>
-              <td class="text-end">
-                <a href="#" class="
-                    btn btn-sm btn-icon btn-bg-light btn-active-color-primary
-                  ">
-                  <i class="bi bi-three-dots fs-5"></i>
-                </a>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <div class="symbol symbol-50px me-2">
-                  <span class="symbol-label bg-light-danger">
-                    <app-keenicon name="category" class="fs-2x text-danger"></app-keenicon>
-                  </span>
-                </div>
-              </td>
-              <td>
-                <a href="#" class="text-gray-900 fw-bolder text-hover-primary mb-1 fs-6">
-                  Special Meal
-                </a>
-                <span class="text-muted fw-bold d-block fs-7">Quona Rice</span>
-              </td>
-              <td class="text-end">
-                <span class="text-muted fw-bold d-block fs-8">Ordered</span>
-                <span class="text-gray-900 fw-bolder d-block fs-7">2 week ago</span>
-              </td>
-              <td class="text-end">
-                <span class="badge badge-light-danger fs-7 fw-bolder">Delivered</span>
-              </td>
-              <td class="text-end">
-                <a href="#" class="
-                    btn btn-sm btn-icon btn-bg-light btn-active-color-primary
-                  ">
-                  <i class="bi bi-three-dots fs-5"></i>
-                </a>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <div class="symbol symbol-50px me-2">
-                  <span class="symbol-label bg-light-warning">
-                    <app-keenicon name="abstract-26" class="fs-2x text-warning"></app-keenicon>
-                  </span>
-                </div>
-              </td>
-              <td>
-                <a href="#" class="text-gray-900 fw-bolder text-hover-primary mb-1 fs-6">
-                  Active Customers
-                </a>
-                <span class="text-muted fw-bold d-block fs-7">Best Customers</span>
-              </td>
-              <td class="text-end">
-                <span class="text-muted fw-bold d-block fs-8">Ordered</span>
-                <span class="text-gray-900 fw-bolder d-block fs-7">5 week ago</span>
-              </td>
-              <td class="text-end">
-                <span class="badge badge-light-warning fs-7 fw-bolder">Delivered</span>
-              </td>
-              <td class="text-end">
-                <a href="#" class="
-                    btn btn-sm btn-icon btn-bg-light btn-active-color-primary
-                  ">
-                  <i class="bi bi-three-dots fs-5"></i>
-                </a>
-              </td>
-            </tr>
-          </tbody>
-          <!-- end::Table body -->
-        </table>
-      </div>
-      <!-- end::Table -->
-    </div>
-    <!-- end::Tap pane -->
-    <!-- begin::Tap pane -->
-    <div class="tab-pane fade" [ngClass]="activeClass('kt_table_widget_7_tab_3')" id="kt_table_widget_7_tab_3">
-      <!-- begin::Table container -->
-      <div class="table-responsive">
-        <!-- begin::Table -->
-        <table class="table align-middle gs-0 gy-3">
-          <!-- begin::Table head -->
-          <thead>
-            <tr>
-              <th class="p-0 w-50px"></th>
-              <th class="p-0 min-w-150px"></th>
-              <th class="p-0 min-w-140px"></th>
-              <th class="p-0 min-w-120px"></th>
-            </tr>
-          </thead>
-          <!-- end::Table head -->
-          <!-- begin::Table body -->
-          <tbody>
-            <tr>
-              <td>
-                <div class="symbol symbol-50px me-2">
-                  <span class="symbol-label bg-light-success">
-                    <app-keenicon name="basket" class="fs-2x text-success"></app-keenicon>
-                  </span>
-                </div>
-              </td>
-              <td>
-                <a href="#" class="text-gray-900 fw-bolder text-hover-primary mb-1 fs-6">
-                  Media Device
-                </a>
-                <span class="text-muted fw-bold d-block fs-7">
-                  Voice and video recorder
-                </span>
-              </td>
-              <td class="text-end">
-                <span class="text-muted fw-bold d-block fs-8">Ordered</span>
-                <span class="text-gray-900 fw-bolder d-block fs-7">3 month ago</span>
-              </td>
-              <td class="text-end">
-                <span class="badge badge-light-success fs-7 fw-bolder">Delivered</span>
-              </td>
-              <td class="text-end">
-                <a href="#" class="
-                    btn btn-sm btn-icon btn-bg-light btn-active-color-primary
-                  ">
-                  <i class="bi bi-three-dots fs-5"></i>
-                </a>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <div class="symbol symbol-50px me-2">
-                  <span class="symbol-label bg-light-danger">
-                    <app-keenicon name="category" class="fs-2x text-danger"></app-keenicon>
-                  </span>
-                </div>
-              </td>
-              <td>
-                <a href="#" class="text-gray-900 fw-bolder text-hover-primary mb-1 fs-6">
-                  Special Meal
-                </a>
-                <span class="text-muted fw-bold d-block fs-7">Quona Rice</span>
-              </td>
-              <td class="text-end">
-                <span class="text-muted fw-bold d-block fs-8">Ordered</span>
-                <span class="text-gray-900 fw-bolder d-block fs-7">5 month ago</span>
-              </td>
-              <td class="text-end">
-                <span class="badge badge-light-danger fs-7 fw-bolder">Delivered</span>
-              </td>
-              <td class="text-end">
-                <a href="#" class="
-                    btn btn-sm btn-icon btn-bg-light btn-active-color-primary
-                  ">
-                  <i class="bi bi-three-dots fs-5"></i>
-                </a>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <div class="symbol symbol-50px me-2">
-                  <span class="symbol-label bg-light-warning">
-                    <app-keenicon name="abstract-26" class="fs-2x text-warning"></app-keenicon>
-                  </span>
-                </div>
-              </td>
-              <td>
-                <a href="#" class="text-gray-900 fw-bolder text-hover-primary mb-1 fs-6">
-                  Active Customers
-                </a>
-                <span class="text-muted fw-bold d-block fs-7">Best Customers</span>
-              </td>
-              <td class="text-end">
-                <span class="text-muted fw-bold d-block fs-8">Ordered</span>
-                <span class="text-gray-900 fw-bolder d-block fs-7">6 month ago</span>
-              </td>
-              <td class="text-end">
-                <span class="badge badge-light-warning fs-7 fw-bolder">Delivered</span>
-              </td>
-              <td class="text-end">
-                <a href="#" class="
-                    btn btn-sm btn-icon btn-bg-light btn-active-color-primary
-                  ">
-                  <i class="bi bi-three-dots fs-5"></i>
-                </a>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <div class="symbol symbol-50px me-2">
-                  <span class="symbol-label bg-light-info">
-                    <app-keenicon name="abstract-41" class="fs-2x text-info"></app-keenicon>
-                  </span>
-                </div>
-              </td>
-              <td>
-                <a href="#" class="text-gray-900 fw-bolder text-hover-primary mb-1 fs-6">
-                  Strawberry Boxes
-                </a>
-                <span class="text-muted fw-bold d-block fs-7">From Spain</span>
-              </td>
-              <td class="text-end">
-                <span class="text-muted fw-bold d-block fs-8">Ordered</span>
-                <span class="text-gray-900 fw-bolder d-block fs-7">4 month ago</span>
-              </td>
-              <td class="text-end">
-                <span class="badge badge-light-info fs-7 fw-bolder">Delivered</span>
-              </td>
-              <td class="text-end">
-                <a href="#" class="
-                    btn btn-sm btn-icon btn-bg-light btn-active-color-primary
-                  ">
-                  <i class="bi bi-three-dots fs-5"></i>
-                </a>
-              </td>
-            </tr>
-          </tbody>
-          <!-- end::Table body -->
-        </table>
-      </div>
-      <!-- end::Table -->
-    </div>
+    <!-- end::Table -->
     <!-- end::Tap pane -->
   </div>
 </div>
