changes added by tejaswini

--- a/src/app/_metronic/layout/components/footer/footer.component.html
+++ b/src/app/_metronic/layout/components/footer/footer.component.html
@@ -20,9 +20,28 @@
 
   <!--begin::Menu-->
   <ul class="menu menu-gray-600 menu-hover-primary fw-semibold order-1">
-    <li class="menu-item"><a href="https://keenthemes.com/" target="_blank" class="menu-link px-2">About</a></li>
+    
+    <div class="menu-item">
+      <a class="menu-link without-sub" routerLinkActive="active" routerLink="/auth/about">
+        <span class="menu-bullet">
+          <span class="bullet bullet-dot"></span>
+        </span>
+        <span class="menu-title">About Us
+        </span>
+      </a>
+    </div>
+    
+    <div class="menu-item">
+      <a class="menu-link without-sub" routerLinkActive="active" routerLink="/auth/contactUs">
+        <span class="menu-bullet">
+          <span class="bullet bullet-dot"></span>
+        </span>
+        <span class="menu-title">Contact Us
+        </span>
+      </a>
+    </div>
 
-    <li class="menu-item"><a href="https://devs.keenthemes.com/" target="_blank" class="menu-link px-2">Support</a></li>
+    <!-- <li class="menu-item"><a href="https://devs.keenthemes.com/" target="_blank" class="menu-link px-2">Support</a></li> -->
 
     
   </ul>
