--- a/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
+++ b/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
@@ -596,6 +596,18 @@
         </div>
       </div>
     </div>
+    
+    <br><br><br><br>
+    <!-- Logout -->
+    <div class="menu-item menu-accordion" data-kt-menu-trigger="click" routerLinkActive="here show" routerLink="/auth/logout">
+      <span class="menu-link">
+        <span class="menu-icon">
+          <app-keenicon name="element-plus" class="fs-2"></app-keenicon>
+        </span>
+        <span class="menu-title">Sign Out
+        </span>
+      </span>
+    </div>
 
 
     <!-- </div> -->
@@ -914,6 +926,19 @@
           </span>
         </div>
       </div>
+    </div>
+
+    
+    <br><br><br><br>
+    <!-- Logout -->
+    <div class="menu-item menu-accordion" data-kt-menu-trigger="click" routerLinkActive="here show" routerLink="/auth/logout">
+      <span class="menu-link">
+        <span class="menu-icon">
+          <app-keenicon name="element-plus" class="fs-2"></app-keenicon>
+        </span>
+        <span class="menu-title">Sign Out
+        </span>
+      </span>
     </div>
 
     <!-- CRM -->
