--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget12/tables-widget12.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget12/tables-widget12.component.html
@@ -1,5 +1,60 @@
 <!-- begin::Body -->
 <div class="card-body py-3">
+  
+  <form [formGroup]="FilterForm">
+    <div class="row">
+      <div class="col-auto">
+        <span class="card-label fw-bolder fs-5 mb-1">Select Petrol Pump : </span>
+        <span class="badge badge-light-success fs-6 fw-bolder">
+          <input class="form-control" type="text" list="dealerList" placeholder="Select Pump Name"
+            (change)="getDetailsByCustomerMapName($event)">
+          <datalist id="dealerList">
+            <option *ngFor="let data of dealerList" [value]="data.companyName">
+          </datalist>
+        </span>
+      </div>
+      <div class="col-auto">
+        <span class="card-label fw-bolder fs-6 mb-1">Select Month : </span>
+        <span class="badge badge-light-success fs-6 fw-bolder">
+          <select class="form-control" style="font-size: 0.750rem;color: #9EA79E" formControlName="month">
+            <option value=""> Select Month </option>
+            <option value="01"> Jan </option>
+            <option value="02"> Feb </option>
+            <option value="03"> Mar </option>
+            <option value="04"> Apr </option>
+            <option value="05"> May </option>
+            <option value="06"> Jun </option>
+            <option value="07"> Jul </option>
+            <option value="08"> Aug </option>
+            <option value="09"> Sep </option>
+            <option value="10"> Oct </option>
+            <option value="11"> Nov </option>
+            <option value="12"> Dec </option>
+          </select>
+        </span>
+      </div>
+
+      <div class="col-auto">
+        <span class="card-label fw-bolder fs-6 mb-1">Select Year : </span>
+        <span class="badge badge-light-success fs-6 fw-bolder">
+          <select formControlName="year" class="form-select" required>
+            <option value={{currentYear}}> {{currentYear}} </option>
+            <option value={{lastYear}}> {{lastYear}} </option>
+            <option value={{last2Year}}> {{last2Year}} </option>
+            <option value={{lastFourthYear}}> {{lastFourthYear}} </option>
+            <option value={{lastFifthYear}}> {{lastFifthYear}} </option>
+          </select>
+        </span>
+      </div>
+
+      <div class="col-auto">
+        <button class="card-label fw-bolder fs-6 mb-1 btn btn-sm btn-primary btn-icon"
+          >View </button>
+      </div>
+    </div>
+  </form>
+  <br>
+
   <!-- begin::Table container -->
   <div class="table-responsive">
     <!-- begin::Table -->
