--- a/src/app/_metronic/partials/layout/extras/dropdown-inner/user-inner/user-inner.component.html
+++ b/src/app/_metronic/partials/layout/extras/dropdown-inner/user-inner/user-inner.component.html
@@ -159,3 +159,58 @@
     <a (click)="logout()" class="menu-link px-5 cursor-pointer"> Sign Out </a>
   </div>
 </ng-container>
+
+<ng-container *ngIf="user">
+  <div class="menu-item px-3">
+    <div class="menu-content d-flex align-items-center px-3">
+      <!-- <div *ngIf="userProfile" class="symbol symbol-50px me-5">
+        <img alt="Logo" [src]="userProfile" />
+      </div> -->
+      <!-- <div *ngIf="!userProfile" class="symbol symbol-50px me-5">
+        <img src="./assets/media/avatars/blank.png" />
+      </div> -->
+
+      <div class="d-flex flex-column">
+        <div class="fw-bolder d-flex align-items-center fs-5">
+          <!-- {{ userName }} -->
+          <!-- <span class="badge badge-light-success fw-bolder fs-8 px-2 py-1 ms-2" >Pro</span> -->
+        </div>
+        <a class="fw-bold text-muted text-hover-primary fs-7 cursor-pointer">
+          <!-- {{ userMobile }} -->
+        </a>
+        <a class="fw-bold text-muted text-hover-primary fs-7 cursor-pointer">
+          <!-- {{ userEmail }} -->
+        </a>
+      </div>
+    </div>
+  </div>
+
+  <div class="separator my-2"></div>
+
+  <div class="menu-item px-5">
+    <a routerLink="/crafted/pages/profile" class="menu-link px-5">
+      My Profile
+    </a>
+  </div>
+
+  <!-- <div class="menu-item px-5">
+    <a routerLink="/credit/subscription" class="menu-link px-5">
+      Subscription
+    </a>
+  </div> -->
+
+  <div
+    class="menu-item px-5"
+    data-kt-menu-trigger="hover"
+    data-kt-menu-placement="left-start"
+    data-kt-menu-flip="bottom"
+  >
+  </div>
+
+  <div class="menu-item px-5">
+    <!-- <a (click)="logout()" class="menu-link px-5 cursor-pointer"> Sign Out </a> -->
+    <a routerLink="/auth/logout" class="menu-link px-5">
+      Sign Out
+    </a>
+  </div>
+</ng-container>
